--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,8 @@
      <Compile Include="Assets\_Completed-Assets\Scripts\CompletePlayerController.cs" />
      <Compile Include="Assets\_Completed-Assets\Scripts\CompleteRotator.cs" />
      <Compile Include="Assets\_Scripts\EnemyMove.cs" />
+     <Compile Include="Assets\_Scripts\GameManager.cs" />
+     <Compile Include="Assets\_Scripts\Life.cs" />
      <Compile Include="Assets\_Scripts\LoadGame.cs" />
      <Compile Include="Assets\_Scripts\ManagerEnemies.cs" />
      <Compile Include="Assets\_Scripts\MoveCharacter.cs" />
@@ -69,6 +71,7 @@
      <Compile Include="Assets\_Scripts\Wall.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\TutorialInfo.cs" />
      <None Include="Assets\TutorialInfo\Fonts\LICENSE.txt" />
+     <None Include="Assets\Notes\Tarea.txt" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>C:/Users/Arturo/proyecto/New Unity UFO/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
